--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,9 @@
-.nav-static-side,
-.footer {
-    -webkit-transition: all 0.4s;
-    -moz-transition: all 0.4s;
-    -o-transition: all 0.4s;
-    transition: all 0.4s;
+#sidebar .admin-avatar {
+    width: 50px;
+    height: 50px;
 }
-.sidebar-default {
-    color: #fff;
-    background-color: #2f4050;
-    height: auto;
-}
-.sidebar-static {
-    width: 220px;
-}
-
-img {
-    max-width: 100%;
+.sidebar-header {
+    display: flex;
 }
 a,
 a:hover,
@@ -47,13 +35,17 @@ a:focus {
     margin: 40px 0;
 }
 
+i,
+span {
+    display: inline-block;
+}
+
 /* ---------------------------------------------------
     SIDEBAR STYLE
 ----------------------------------------------------- */
 
 .wrapper {
     display: flex;
-    width: 100%;
     align-items: stretch;
 }
 
@@ -66,7 +58,48 @@ a:focus {
 }
 
 #sidebar.active {
-    margin-left: -250px;
+    min-width: 80px;
+    max-width: 80px;
+    text-align: center;
+}
+
+#sidebar.active .sidebar-header h3,
+#sidebar.active .CTAs {
+    display: none;
+}
+
+#sidebar.active .sidebar-header strong {
+    display: block;
+}
+
+#sidebar ul li a {
+    text-align: left;
+}
+
+#sidebar.active ul li a {
+    padding: 20px 10px;
+    text-align: center;
+    font-size: 0.85em;
+}
+
+#sidebar.active ul li a i {
+    margin-right: 0;
+    display: block;
+    font-size: 1.8em;
+    margin-bottom: 5px;
+}
+
+#sidebar.active ul ul a {
+    padding: 10px !important;
+}
+
+#sidebar.active .dropdown-toggle::after {
+    top: auto;
+    bottom: 10px;
+    right: 50%;
+    -webkit-transform: translateX(50%);
+    -ms-transform: translateX(50%);
+    transform: translateX(50%);
 }
 
 #sidebar .sidebar-header {
@@ -74,14 +107,14 @@ a:focus {
     background: #6d7fcc;
 }
 
+#sidebar .sidebar-header strong {
+    display: none;
+    font-size: 1.8em;
+}
+
 #sidebar ul.components {
     padding: 20px 0;
     border-bottom: 1px solid #47748b;
-}
-
-#sidebar ul p {
-    color: #fff;
-    padding: 10px;
 }
 
 #sidebar ul li a {
@@ -93,6 +126,10 @@ a:focus {
 #sidebar ul li a:hover {
     color: #7386D5;
     background: #fff;
+}
+
+#sidebar ul li a i {
+    margin-right: 10px;
 }
 
 #sidebar ul li.active>a,
@@ -148,20 +185,85 @@ a.article:hover {
 
 #content {
     width: 100%;
-    padding: 20px;
     min-height: 100vh;
     transition: all 0.3s;
 }
+/*navbar-top*/
+.navbar-static-top .dropdown-menu {
+    right: 0;
+    left: auto;
+}
+.dropdown-messages-box {
+    display: flex;
+}
+.media-body {
+    font-size: 12px;
+}
+.message-avatar {
+    width: 30px;
+    height: 30px;
+}
+.navbar-top-links li a {
+    padding: 20px 15px;
+    min-height: 50px;
+}
+.navbar-top-links .badge {
+    line-height: 12px;
+    padding: 2px 5px;
+    position: absolute;
+    right: 2px;
+    top: -6px;
+}
 
+.navbar-top-links .dropdown-toggle::after {
+    display: none;
+}
 /* ---------------------------------------------------
     MEDIAQUERIES
 ----------------------------------------------------- */
 
 @media (max-width: 768px) {
     #sidebar {
-        margin-left: -250px;
+        min-width: 80px;
+        max-width: 80px;
+        text-align: center;
+        margin-left: -80px !important;
+    }
+    .dropdown-toggle::after {
+        top: auto;
+        bottom: 10px;
+        right: 50%;
+        -webkit-transform: translateX(50%);
+        -ms-transform: translateX(50%);
+        transform: translateX(50%);
     }
     #sidebar.active {
+        margin-left: 0 !important;
+    }
+    #sidebar .sidebar-header h3,
+    #sidebar .CTAs {
+        display: none;
+    }
+    #sidebar .sidebar-header strong {
+        display: block;
+    }
+    #sidebar ul li a {
+        padding: 20px 10px;
+    }
+    #sidebar ul li a span {
+        font-size: 0.85em;
+    }
+    #sidebar ul li a i {
+        margin-right: 0;
+        display: block;
+    }
+    #sidebar ul ul a {
+        padding: 10px !important;
+    }
+    #sidebar ul li a i {
+        font-size: 1.3em;
+    }
+    #sidebar {
         margin-left: 0;
     }
     #sidebarCollapse span {
