add cards.html slider widgets.html

--- a/css/style.css
+++ b/css/style.css
@@ -166,3 +166,30 @@ span {
 .progress {
     margin-bottom: 15px;
 }
+
+.info-box {
+    display: flex;
+    min-height: 90px;
+    background: #fff;
+    width: 100%;
+    box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+    border-radius: 2px;
+    margin-bottom: 15px;
+}
+.info-box-icon {
+    border-top-left-radius: 2px;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 2px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 90px;
+    width: 90px;
+    text-align: center;
+}
+.info-box-content {
+    padding: 5px 10px;
+    display: block;
+    flex-grow: 1;
+}
